# discord-progress-bar

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yaml  quality.yaml
examples/: basic.py
src/discord_progress_bar/: progress_bar.py  types.py
